CREATE TABLE "users" (
  "id" uuid PRIMARY KEY REFERENCES auth.users (id) ON DELETE CASCADE,
  "first_name" varchar NOT NULL,
  "last_name" varchar NOT NULL,
  "email" varchar UNIQUE,
  "phone" varchar,
  "created_at" timestamptz DEFAULT now(),
  "updated_at" timestamptz DEFAULT now()
);

CREATE TABLE "contacts" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" uuid NOT NULL,
  "name" varchar NOT NULL,
  "industry" varchar,
  "role" varchar,
  "linkedin_url" varchar,
  "notes" text,
  "met_through" text,
  "follow_up_frequency_days" int,
  "preferred_contact_method" varchar,
  "preferred_contact_value" varchar
);

CREATE TABLE "contact_emails" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "contact_id" int NOT NULL,
  "email" varchar,
  "is_primary" boolean NOT NULL DEFAULT false
);

CREATE TABLE "contact_phones" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "contact_id" int NOT NULL,
  "phone" varchar NOT NULL,
  "is_primary" boolean NOT NULL DEFAULT false,
  "type" varchar NOT NULL DEFAULT 'mobile'
);

CREATE TABLE "companies" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar UNIQUE NOT NULL
);

CREATE TABLE "contact_companies" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "contact_id" int NOT NULL,
  "company_id" int NOT NULL,
  "title" varchar,
  "start_date" date,
  "end_date" date,
  "is_current" boolean NOT NULL DEFAULT false
);

CREATE TABLE "schools" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar UNIQUE NOT NULL
);

CREATE TABLE "contact_schools" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "contact_id" int NOT NULL,
  "school_id" int NOT NULL,
  "degree" varchar,
  "field_of_study" varchar,
  "start_year" int,
  "end_year" int
);

CREATE TABLE "user_companies" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" uuid NOT NULL,
  "company_id" int NOT NULL,
  "title" varchar,
  "start_date" date,
  "end_date" date,
  "is_current" boolean NOT NULL DEFAULT false
);

CREATE TABLE "user_schools" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" uuid NOT NULL,
  "school_id" int NOT NULL,
  "degree" varchar,
  "field_of_study" varchar,
  "start_year" int,
  "end_year" int
);

CREATE TABLE "meetings" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" uuid NOT NULL,
  "meeting_date" timestamptz NOT NULL,
  "meeting_type" varchar NOT NULL,
  "notes" text,
  "transcript" text
);

CREATE TABLE "meeting_contacts" (
  "meeting_id" int NOT NULL,
  "contact_id" int NOT NULL
);

CREATE TABLE "referrals" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" uuid NOT NULL,
  "referred_by_contact_id" int NOT NULL,
  "referred_contact_id" int NOT NULL,
  "referral_meeting_id" int,
  "notes" text
);

CREATE TABLE "interactions" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "contact_id" int NOT NULL,
  "interaction_date" timestamptz NOT NULL,
  "interaction_type" varchar NOT NULL,
  "summary" text
);

CREATE TABLE "tags" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" uuid NOT NULL,
  "name" varchar NOT NULL
);

CREATE TABLE "contact_tags" (
  "contact_id" int NOT NULL,
  "tag_id" int NOT NULL
);

CREATE TABLE "attachments" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" uuid NOT NULL,
  "bucket" varchar NOT NULL,
  "object_path" varchar NOT NULL,
  "file_name" varchar NOT NULL,
  "content_type" varchar,
  "file_size_bytes" bigint,
  "is_public" boolean NOT NULL DEFAULT false,
  "notes" text,
  "created_at" timestamptz
);

CREATE TABLE "contact_attachments" (
  "contact_id" int NOT NULL,
  "attachment_id" int NOT NULL
);

CREATE TABLE "meeting_attachments" (
  "meeting_id" int NOT NULL,
  "attachment_id" int NOT NULL
);

CREATE TABLE "interaction_attachments" (
  "interaction_id" int NOT NULL,
  "attachment_id" int NOT NULL
);

CREATE TABLE "post_meeting_action_items" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" uuid NOT NULL,
  "meeting_id" int NOT NULL,
  "owner_type" varchar NOT NULL,
  "contact_id" int,
  "title" varchar NOT NULL,
  "description" text,
  "due_at" timestamptz,
  "is_completed" boolean NOT NULL DEFAULT false,
  "created_at" timestamptz,
  "completed_at" timestamptz
);

CREATE TABLE "follow_up_action_items" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" uuid NOT NULL,
  "contact_id" int NOT NULL,
  "title" varchar NOT NULL,
  "description" text,
  "due_at" timestamptz,
  "is_completed" boolean NOT NULL DEFAULT false,
  "created_at" timestamptz,
  "completed_at" timestamptz
);

CREATE UNIQUE INDEX ON "contact_emails" ("contact_id", "email");

CREATE UNIQUE INDEX ON "contact_phones" ("contact_id", "phone");

CREATE UNIQUE INDEX ON "contact_companies" ("contact_id", "company_id", "start_date");

CREATE UNIQUE INDEX ON "contact_schools" ("contact_id", "school_id", "start_year");

CREATE UNIQUE INDEX ON "user_companies" ("user_id", "company_id", "start_date");

CREATE UNIQUE INDEX ON "user_schools" ("user_id", "school_id", "start_year");

CREATE UNIQUE INDEX ON "meeting_contacts" ("meeting_id", "contact_id");

CREATE UNIQUE INDEX ON "referrals" ("user_id", "referred_by_contact_id", "referred_contact_id", "referral_meeting_id");

CREATE UNIQUE INDEX ON "tags" ("user_id", "name");

CREATE UNIQUE INDEX ON "contact_tags" ("contact_id", "tag_id");

CREATE UNIQUE INDEX ON "attachments" ("bucket", "object_path");

CREATE UNIQUE INDEX ON "contact_attachments" ("contact_id", "attachment_id");

CREATE UNIQUE INDEX ON "meeting_attachments" ("meeting_id", "attachment_id");

CREATE UNIQUE INDEX ON "interaction_attachments" ("interaction_id", "attachment_id");

ALTER TABLE "contacts" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "contact_emails" ADD FOREIGN KEY ("contact_id") REFERENCES "contacts" ("id");

ALTER TABLE "contact_phones" ADD FOREIGN KEY ("contact_id") REFERENCES "contacts" ("id");

ALTER TABLE "contact_companies" ADD FOREIGN KEY ("contact_id") REFERENCES "contacts" ("id");

ALTER TABLE "contact_companies" ADD FOREIGN KEY ("company_id") REFERENCES "companies" ("id");

ALTER TABLE "contact_schools" ADD FOREIGN KEY ("contact_id") REFERENCES "contacts" ("id");

ALTER TABLE "contact_schools" ADD FOREIGN KEY ("school_id") REFERENCES "schools" ("id");

ALTER TABLE "user_companies" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "user_companies" ADD FOREIGN KEY ("company_id") REFERENCES "companies" ("id");

ALTER TABLE "user_schools" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "user_schools" ADD FOREIGN KEY ("school_id") REFERENCES "schools" ("id");

ALTER TABLE "meetings" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "meeting_contacts" ADD FOREIGN KEY ("meeting_id") REFERENCES "meetings" ("id");

ALTER TABLE "meeting_contacts" ADD FOREIGN KEY ("contact_id") REFERENCES "contacts" ("id");

ALTER TABLE "referrals" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "referrals" ADD FOREIGN KEY ("referred_by_contact_id") REFERENCES "contacts" ("id");

ALTER TABLE "referrals" ADD FOREIGN KEY ("referred_contact_id") REFERENCES "contacts" ("id");

ALTER TABLE "referrals" ADD FOREIGN KEY ("referral_meeting_id") REFERENCES "meetings" ("id");

ALTER TABLE "interactions" ADD FOREIGN KEY ("contact_id") REFERENCES "contacts" ("id");

ALTER TABLE "tags" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "contact_tags" ADD FOREIGN KEY ("contact_id") REFERENCES "contacts" ("id");

ALTER TABLE "contact_tags" ADD FOREIGN KEY ("tag_id") REFERENCES "tags" ("id");

ALTER TABLE "attachments" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "contact_attachments" ADD FOREIGN KEY ("contact_id") REFERENCES "contacts" ("id");

ALTER TABLE "contact_attachments" ADD FOREIGN KEY ("attachment_id") REFERENCES "attachments" ("id");

ALTER TABLE "meeting_attachments" ADD FOREIGN KEY ("meeting_id") REFERENCES "meetings" ("id");

ALTER TABLE "meeting_attachments" ADD FOREIGN KEY ("attachment_id") REFERENCES "attachments" ("id");

ALTER TABLE "interaction_attachments" ADD FOREIGN KEY ("interaction_id") REFERENCES "interactions" ("id");

ALTER TABLE "interaction_attachments" ADD FOREIGN KEY ("attachment_id") REFERENCES "attachments" ("id");

ALTER TABLE "post_meeting_action_items" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "post_meeting_action_items" ADD FOREIGN KEY ("meeting_id") REFERENCES "meetings" ("id");

ALTER TABLE "post_meeting_action_items" ADD FOREIGN KEY ("contact_id") REFERENCES "contacts" ("id");

ALTER TABLE "follow_up_action_items" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "follow_up_action_items" ADD FOREIGN KEY ("contact_id") REFERENCES "contacts" ("id");
